force-app/main/default/objects/Student__c/fields/HaveVehicle__c.field-meta.xml
<CustomField>
    <fullName>HaveVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HaveVehicle</label>
    <type>Checkbox</type>
</CustomField>