force-app/main/default/objects/Student__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>