force-app/main/default/objects/Student__c/fields/WifeName__c.field-meta.xml
<CustomField>
    <fullName>WifeName__c</fullName>
    <label>WifeName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>