force-app/main/default/objects/Student__c/validationRules/Student_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_DOB</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Student DOB should be greater than Today.</errorMessage>
</ValidationRule>