force-app/main/default/objects/Student__c/listViews/Male_students.listView-meta.xml
<ListView>
    <fullName>Male_students</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sex__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <label>Male students</label>
</ListView>